# doctran_openai

./: README.md  benchmark.ipynb  examples.ipynb  pyproject.toml
doctran/: doctran.py
doctran_openai/: __init__.py  doctran_openai.py
doctran_openai/transformers/: transformers.py
