[tool.poetry]
name = "doctran_openai"
version = "0.0.28"
description = "Document transformation framework for vector based retrieval"
authors = ["William Yang <yangfei86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
pydantic = "^2.7.1"
lxml = "^4.9.2"
openai = "^1.23.2"
presidio-analyzer = "^2.2.33"
presidio-anonymizer = "^2.2.33"
spacy = "^3.5.4"
tiktoken = "^0.5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
