[tool.poetry]
name = "doctran_openai"
version = "0.0.30"
description = "Document transformation framework for vector based retrieval"
authors = ["William Yang <yangfei86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
pydantic = "^2.8.2"
lxml = "^4.9.4"
openai = "^1.37.2"
presidio-analyzer = "^2.2.355"
presidio-anonymizer = "^2.2.355"
spacy = "^3.7.5"
tiktoken = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
